new structure home and login component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav class="navigation">
-  <a [routerLink]= "['home']">Home</a>
+  <a [routerLink]= "['home']">HOME</a>
+  <a [routerLink] = "['login']">LOGIN</a>
 </nav>
 
 <router-outlet></router-outlet>
