--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <nav class="navigation">
   <a [routerLink]= "['home']">HOME</a>
   <a [routerLink] = "['login']">LOGIN</a>
+  <a [routerLink] = "['signin']">SIGN IN</a>
+
+
 </nav>
 
 <router-outlet></router-outlet>
