add store service

--- a/src/app/backoffice/create-post/create-post.component.html
+++ b/src/app/backoffice/create-post/create-post.component.html
@@ -5,7 +5,7 @@
     Nickname:  <input type="text" formControlName= "nickname"/>
     Title:  <input type="text" formControlName= "title"/>
     Text:  <input type="text" formControlName= "text"/>
-    <button (click)="createPost()">Crear Nuevo Post</button>
+    <button type="submit" (click)="createPost()">Crear Nuevo Post</button>
 </form>
 
 {{postForm.value.username}}
