--- a/src/app/home/home-post/home-post.component.html
+++ b/src/app/home/home-post/home-post.component.html
@@ -1,9 +1,10 @@
 <p>LISTA DE POST</p>
 <ul>
-    <li *ngFor="let post of (allPost$ | async)" (click)="onSelect(post._id)"  >
+    <li *ngFor="let post of (allPost$ | async)"   >
         <h3>{{post.title}}</h3>
         <h4>{{post.nickname}}</h4>
         <p>{{post.text}}</p>
+        <button type="button" (click)="onSelect(post._id)">Detalles</button>
     </li>
 </ul>
 
