--- a/src/app/backoffice/post-list/post-list.component.html
+++ b/src/app/backoffice/post-list/post-list.component.html
@@ -5,7 +5,7 @@
         <h3>{{post.title}}</h3>
         <h4>{{post.nickname}}</h4>
         <p>{{post.text}}</p>
-        <button (click)="onSubmit(post._id)">EDITAR</button>
+        <button [routerLink]= "'/admin/' + post._id ">EDITAR</button>
+        <button  (click)= "deletePost(post)">BORRAR</button>
     </li>
-
 </ul>
