--- a/src/app/backoffice/edit-post/edit-post.component.html
+++ b/src/app/backoffice/edit-post/edit-post.component.html
@@ -2,17 +2,59 @@
 <div>
     <button [routerLink]="['/admin']"> Volver Lista Post</button>
     <h3>{{(post$ | async)?.title}}</h3>
-    <button>EDITAR</button>
-    <button>AÑADIR COMENTARIO</button>
+    <button  type="button" (click)= "editPost()">EDITAR</button>
+    <button type="button" (click)= "commentAdd()">AÑADIR COMENTARIO</button>
     <br>
-    <span>{{(post$ | async)?.username}}</span>
+    <h4>{{(post$ | async)?.title}}</h4>
+    <p>{{(post$ | async)?.username}}</p>
     <p>{{(post$ | async)?.text}}}</p>
+    <div *ngIf="isEdit" class="edit">
+        <span>EDITAR POST</span>
+        <form  class= "edit" [formGroup]= "updateForm"> 
+            <label for="username">Username:</label>
+            <input name="username" type="text" formControlName= "username"/>
+            <label for="nickname">Nickname:</label>
+            <input name= "nickname" type="text" formControlName= "nickname"/>
+            <label for="title">Title:</label>
+            <input name= "title" type="text" formControlName= "title"/>
+            <label for="text">Text:</label>
+            <textarea name= "text" type="text" formControlName= "text"></textarea>
+            <button type="submit" (click)="updatePost()">ACTUALIZAR</button>
+        </form>
+    </div>  
+    <div *ngIf="isAdded" class="addComment">
+        <span>NUEVO COMENETARIO</span>
+        <form  class= "addComment" [formGroup]= "commentForm"> 
+            <label for="username">Username:</label>
+            <input name="username" type="text" formControlName= "username"/>
+            <label for="nickname">Nickname:</label>
+            <input name= "nickname" type="text" formControlName= "nickname"/>
+            <label for="text">Comment:</label>
+            <textarea name= "comment" type="text" formControlName= "comment"></textarea>
+            <button type="submit" (click)="addComment()">Añadir</button>
+        </form>
+    </div>    
     <ul> Comments:
         <li *ngFor="let comment of (post$ | async)?.comments" >
             <h4>{{comment?.username}}</h4> 
             <p>{{comment?.comment}}</p>
-            <button >Borrar Comentario</button>
-            <button>Editar Comentario</button>
+            <button type="button" (click)="deleteComment(comment?._id)" >Borrar Comentario</button>
+            <button (click)= "isUpdateComment()">Editar Comentario</button>
+            <div *ngIf="isUpdate" class="updateComment">
+                <span>UPDATE COMENETARIO</span>
+                <form  class= "updateComment" [formGroup]= "updateCommentForm"> 
+                    <label for="username">Username:</label>
+                    <input name="username" type="text" formControlName= "username"/>
+                    <label for="nickname">Nickname:</label>
+                    <input name= "nickname" type="text" formControlName= "nickname"/>
+                    <label for="text">Comment:</label>
+                    <textarea name= "comment" type="text" formControlName= "comment"></textarea>
+                    <button type="submit" (click)="updateComment(comment?._id)">UPDATE</button>
+                </form>
+            </div>    
      </li>
+
+
     </ul> 
+    
 </div>
