change htlm forms

--- a/src/app/backoffice/edit-post/edit-post.component.html
+++ b/src/app/backoffice/edit-post/edit-post.component.html
@@ -1,4 +1,5 @@
-<p>edit-post works!</p>
+<h2>POST AND COMMENTS</h2>
+
 <div>
     <button [routerLink]="['/admin']"> Volver Lista Post</button>
     <h3>{{(post$ | async)?.title}}</h3>
