change routes structure

--- a/src/app/signin/sign-in/sign-in.component.html
+++ b/src/app/signin/sign-in/sign-in.component.html
@@ -8,3 +8,5 @@
     <input  name= "password" type= "password" formControlName = "password"/>
     <button type="submit" (click)= "createUser()">Sign In</button>
 </form>
+
+<span>{{error}}</span>
