server post test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
   <a [routerLink]= "['home']">HOME</a>
   <a [routerLink] = "['login']">LOGIN</a>
   <a [routerLink] = "['signin']">SIGN IN</a>
-
-
+  <app-logout></app-logout>
 </nav>
 
 <router-outlet></router-outlet>
