--- a/src/app/home/detail-post/detail-post.component.html
+++ b/src/app/home/detail-post/detail-post.component.html
@@ -4,10 +4,15 @@
     <h3>{{(post$ | async)?.title}}</h3>
     <span>{{(post$ | async)?.username}}</span>
     <p>{{(post$ | async)?.text}}</p>
+
+    <div *ngIf="(post$|async)?.comments?.length>0; then okList else error"></div>
+    <ng-template #okList>
     <ul> Comments:
         <li *ngFor="let comment of (post$ | async)?.comments" >
             <h4>{{comment?.nickname}}</h4> 
             <p>{{comment?.comment}}</p>
      </li>
     </ul> 
+</ng-template>
+<ng-template #error>No hay comentarios</ng-template>
 </div>
