--- a/src/app/backoffice/edit-post/edit-post.component.html
+++ b/src/app/backoffice/edit-post/edit-post.component.html
@@ -6,11 +6,10 @@
     <button  type="button" (click)= "editPost()">EDITAR</button>
     <button type="button" (click)= "commentAdd()">AÑADIR COMENTARIO</button>
     <br>
-    <h4>{{(post$ | async)?.title}}</h4>
+    <h4>{{(post$ | async)?.date}}</h4>
     <p>{{(post$ | async)?.username}}</p>
-    <p>{{(post$ | async)?.text}}}</p>
+    <p>{{(post$ | async)?.text}}</p>
     <div *ngIf="isEdit" class="edit">
-        <span>EDITAR POST</span>
         <form  class= "edit" [formGroup]= "updateForm"> 
             <label for="username">Username:</label>
             <input name="username" type="text" formControlName= "username"/>
@@ -20,11 +19,10 @@
             <input name= "title" type="text" formControlName= "title"/>
             <label for="text">Text:</label>
             <textarea name= "text" type="text" formControlName= "text"></textarea>
-            <button type="submit" (click)="updatePost()">ACTUALIZAR</button>
+            <button type="submit" (click)="updatePost()" [disabled]= "!updateForm.valid">ACTUALIZAR</button>
         </form>
     </div>  
     <div *ngIf="isAdded" class="addComment">
-        <span>NUEVO COMENETARIO</span>
         <form  class= "addComment" [formGroup]= "commentForm"> 
             <label for="username">Username:</label>
             <input name="username" type="text" formControlName= "username"/>
@@ -32,17 +30,19 @@
             <input name= "nickname" type="text" formControlName= "nickname"/>
             <label for="text">Comment:</label>
             <textarea name= "comment" type="text" formControlName= "comment"></textarea>
-            <button type="submit" (click)="addComment()">Añadir</button>
+            <button type="submit" (click)="addComment()" [disabled]= "!commentForm.valid">Añadir</button>
         </form>
     </div>    
-    <ul> Comments:
-        <li *ngFor="let comment of (post$ | async)?.comments" >
+    
+    <div *ngIf="(post$ |async)?.comments?.length>0; then list else error"></div>
+    <ng-template #list>
+        <ul> Comments:
+        <li *ngFor="let comment of (post$ | async)?.comments let i = index" >
             <h4>{{comment?.username}}</h4> 
             <p>{{comment?.comment}}</p>
             <button type="button" (click)="deleteComment(comment?._id)" >Borrar Comentario</button>
-            <button (click)= "isUpdateComment()">Editar Comentario</button>
+            <button (click)= "isUpdateComment(i)">Editar Comentario</button>
             <div *ngIf="isUpdate" class="updateComment">
-                <span>UPDATE COMENETARIO</span>
                 <form  class= "updateComment" [formGroup]= "updateCommentForm"> 
                     <label for="username">Username:</label>
                     <input name="username" type="text" formControlName= "username"/>
@@ -50,12 +50,14 @@
                     <input name= "nickname" type="text" formControlName= "nickname"/>
                     <label for="text">Comment:</label>
                     <textarea name= "comment" type="text" formControlName= "comment"></textarea>
-                    <button type="submit" (click)="updateComment(comment?._id)">UPDATE</button>
+                    <button type="submit" (click)="updateComment(comment?._id)" [disabled]= "!updateCommentForm.valid">UPDATE</button>
                 </form>
             </div>    
      </li>
-
-
     </ul> 
+    </ng-template>
+    <ng-template #error>No hay comentarios</ng-template>
+
+   
     
 </div>
