--- a/src/app/auth/logout/logout.component.html
+++ b/src/app/auth/logout/logout.component.html
@@ -1,1 +1,1 @@
-<button type="button" (click)="onLogout()">LOGOUT</button>
+<button  pButton  label="Logout" icon="pi pi-power-off" type="button" (click)="onLogout()"></button>
