--- a/src/app/backoffice/create-post/create-post.component.html
+++ b/src/app/backoffice/create-post/create-post.component.html
@@ -8,5 +8,5 @@
     <input name= "title" type="text" formControlName= "title"/>
     <label for="text">Text:</label>
     <textarea name= "text" type="text" formControlName= "text"></textarea>
-    <button (click)="createPost()" [routerLink]="['/admin']">Crear Nuevo Post</button>
+    <button (click)="createPost()">Crear Nuevo Post</button>
 </form>
