primeng styles postDetail component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<p-toast></p-toast>
-<p-menubar  >
-  <nav class="navigation">
-    <a [routerLink]= "['home']">HOME</a>
-    <a [routerLink] = "['login']">LOGIN</a>
-    <a [routerLink] = "['signin']">SIGN IN</a>
+
+<p-menubar>
+    <a  pButton style="margin-right: 1em;" label="Home" icon="pi pi-home" type="button" [routerLink]= "['home']"></a>
+    <a pButton  style="margin-right: 1em;" label="LogIn" icon="pi pi-sign-in" type="button"  [routerLink] = "['login']"></a>
+    <a pButton  style="margin-right: 1em;" label="SingIn" icon="pi pi-user-plus" type="button"  [routerLink] = "['signin']"></a>
     <app-logout></app-logout>
-  </nav>
+
 </p-menubar>
 
 
