--- a/src/app/auth/logout/logout.component.html
+++ b/src/app/auth/logout/logout.component.html
@@ -1,1 +1,1 @@
-<button  pButton  label="Logout" icon="pi pi-power-off" type="button" (click)="onLogout()"></button>
+<button  pButton class="ui-button-danger"  label="Logout" icon="pi pi-power-off" type="button" (click)="onLogout()"></button>
