--- a/src/app/backoffice/edit-post/edit-post.component.html
+++ b/src/app/backoffice/edit-post/edit-post.component.html
@@ -1,13 +1,19 @@
-<h2>POST AND COMMENTS</h2>
 <div>
-    <button [routerLink]="['/admin']"> Volver Lista Post</button>
-    <h3>{{(post$ | async)?.title}}</h3>
-    <button type="button" (click)= "commentAdd()">AÑADIR COMENTARIO</button>
-    <br>
-    <h4>{{(post$ | async)?.date | date: 'medium'}}</h4>
-    <p>{{(post$ | async)?.username}}</p>
-    <p>{{(post$ | async)?.text}}</p>
-    
+    <div class="postDetail" style=" margin-bottom: 2em;">
+        <button  pButton type="button" label="Post List" icon="pi pi-chevron-left" [routerLink]="['/admin']"></button>
+        <p-card header="{{(post$ | async)?.title | uppercase}}" subheader="{{(post$ | async)?.date | date: 'short'}}" 
+        styleClass="ui-card-shadow">
+            <h4> Author: {{(post$ | async)?.username}}</h4>
+            <p-fieldset legend="Text" [toggleable]="true">
+                <p>{{(post$ | async)?.text}}</p>
+            </p-fieldset>
+            <p-footer> 
+            <button pButton  style="margin-top: 1em;" type="button"  icon="pi pi-plus" label="New Comment" class="ui-button-rounded ui-button-success" type="button" (click)= "commentAdd()"></button>
+            </p-footer>
+        </p-card>
+       
+
+    </div>
     <div *ngIf="isAdded" class="addComment">
         <form  class= "addComment" [formGroup]= "commentForm"> 
             <label for="username">Username:</label>
@@ -22,8 +28,7 @@
     
     <div *ngIf="(post$|async)?.comments?.length>0; then okList else error"></div>
         <ng-template #okList>
-            <span>COMENTARIOS:</span>
-                <app-comments *ngFor="let comment of (post$ | async)?.comments let i = index" [comment]="comment"></app-comments>
+            <app-comments  [comments]="(post$ | async)?.comments"></app-comments>
         </ng-template>
         <ng-template #error>No hay comentarios</ng-template>  
  </div>
