--- a/src/app/backoffice/comments/comments.component.html
+++ b/src/app/backoffice/comments/comments.component.html
@@ -1,4 +1,4 @@
-<p-table [columns]="cols" [value]="comments" dataKey= "_id" expandableRows="true">
+ <p-table [columns]="cols" [value]="comments" dataKey= "_id" expandableRows="true">
     <ng-template pTemplate="header" let-columns >
         <tr>
            <th colspan="4">COMMENTS</th> 
@@ -7,14 +7,14 @@
             <th *ngFor="let col of columns">
                 {{col.header}}
             </th>
-            <th>Actions</th>
+            <th style="width: 10em;">Actions</th>
         </tr>
     </ng-template>
     <ng-template  pTemplate="body" let-rowData let-post let-columns="columns" let-expanded="expanded">
         <tr>
-            <td *ngFor="let col of columns">
-                {{rowData[col.field]}}
-          </td>
+            <td>{{rowData.username}}</td>
+            <td>{{rowData.date | date: "short"}}</td>
+            <td>{{rowData.comment}}</td>
             <td>
                 <a href="#" [pRowToggler]="rowData">
                     <button pButton type="button" label="Edit" class="ui-button-rounded"></button>
@@ -25,40 +25,18 @@
     <ng-template let-ri="rowIndex" let-post pTemplate="rowexpansion" let-rowData let-columns="columns">
         <tr>
             <td [attr.colspan]="columns.length + 1">
-                <div class="ui-g ui-fluid" style="font-size:16px;padding:20px">
-                    <div  style="text-align:center">
-                        <form  class= "updateComment" [formGroup]= "updateCommentForm"> 
-                            <label for="username">Username:</label>
-                            <input name="username" type="text" formControlName= "username"/>
-                            <label for="nickname">Nickname:</label>
-                            <input name= "nickname" type="text" formControlName= "nickname"/>
-                            <label for="text">Comment:</label>
-                            <textarea name= "comment" type="text" formControlName= "comment"></textarea>
-                            <button type="button" (click)="updateComment(rowData._id)" [disabled]= "!updateCommentForm.valid">UPDATE</button>
-                        </form> 
+                <form  class= "updateComment" [formGroup]= "updateCommentForm">
+                    <div class="ui-fluid">
+                        <div class="p-field">
+                            <label for="comment">Comment</label>
+                            <textarea pInputTextarea autoResize="autoResize" name= "comment" type="text" formControlName= "comment"></textarea>
+                        </div>
+                        <button pButton  style="width: 10em; margin: 0 auto;" type="button" label="Add Comment" (click)="updateComment(rowData._id)" [disabled]= "!updateCommentForm.valid"></button>
                     </div>
-                </div>
-                </td>
-                </tr>
+                </form> 
+            </td>
+        </tr>
                 
     </ng-template>
 </p-table>
 
-
-
-
-
-<!-- <h4>{{comment.username}}</h4> 
-<p>{{comment.comment}}</p>
-<button type="button" (click)="deleteComment(comment?._id)" >Borrar Comentario</button>
-<button (click)= "isShow()">Editar Comentario</button>
-<div *ngIf="show" class="updateComment">
-    <form  class= "updateComment" [formGroup]= "updateCommentForm"> 
-        <label for="username">Username:</label>
-        <input name="username" type="text" formControlName= "username"/>
-        <label for="nickname">Nickname:</label>
-        <input name= "nickname" type="text" formControlName= "nickname"/>
-        <label for="text">Comment:</label>
-        <textarea name= "comment" type="text" formControlName= "comment"></textarea>
-        <button type="submit" (click)="updateComment(comment?._id)" [disabled]= "!updateCommentForm.valid">UPDATE</button>
-    </form> -->
