--- a/src/app/backoffice/post-list/post-list.component.html
+++ b/src/app/backoffice/post-list/post-list.component.html
@@ -3,56 +3,65 @@
 
 <p-table [columns]="cols" [value]="allPost$ |async" dataKey= "_id" expandableRows="true">
     <ng-template pTemplate="header" let-columns >
+        <!-- <tr><th colspan="6">POST LIST</th></tr> -->
         <tr>
-            <th style="width: 2.25em"></th>
+            <th style="width: 2.7em"></th>
+            <!-- <th style="width: 2.7em"></th>
+            <th style="width: 9em" >Username</th>
+            <th style="width: 9em" >Nickname</th>
+            <th style="width: 11em" >Date</th>
+            <th style="width: 20em" >Title</th> -->
             <th *ngFor="let col of columns">
                 {{col.header}}
             </th>
-            <th>Actions</th>
+            <th style="width: 14em">Actions</th>
         </tr>
     </ng-template>
     <ng-template  pTemplate="body" let-rowData let-post let-columns="columns" let-expanded="expanded">
         <tr>
             <td>
                 <a href="#" [pRowToggler]="rowData">
-                    <i [ngClass]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></i>
+                    <i [ngClass]="expanded ? 'pi pi-minus-circle' : 'pi pi-plus-circle'"></i>
                 </a>
             </td>
-            <td *ngFor="let col of columns">
-                {{rowData[col.field]}}
-          </td>
+            <td>{{rowData.username}}</td>
+            <td>{{rowData.nickname}}</td>
+            <td>{{rowData.date | date: "short"}}</td>
+            <td>{{rowData.title | titlecase }}</td>
           <!-- <td>{{rowData.date | date: "short"}}</td> -->
             <td>
-                <button pButton type="button" label="Coments" class="ui-button-rounded ui-button-secondary" (click)="goToPostDetail(post._id)"></button>
-                <button pButton type="button" label="Delete" class="ui-button-rounded ui-button-danger" (click)= "deletePost(post._id)"></button></td>
+                <button pButton type="button" style="margin-right: 0.5em;" label="Coments" class="ui-button-rounded" (click)="goToPostDetail(post._id)"></button>
+                <button pButton type="button" label="Delete" class="ui-button-rounded ui-button-danger" (click)="deletePost(post._id)"></button></td>
         </tr>
     </ng-template>
     <ng-template let-ri="rowIndex" let-post pTemplate="rowexpansion" let-rowData let-columns="columns">
         <tr>
-            <td [attr.colspan]="columns.length + 1">
+            <td [attr.colspan]="columns.length + 2">
                 <div class="ui-g ui-fluid" style="font-size:16px;padding:10px">
                     <div>
+                        <button pButton  icon="pi pi-pencil" type="button" 
+                    (click)= "editPost(post._id, $event)"></button>
+                        <h3>{{rowData.title | titlecase }}</h3>
                         <p>{{rowData.text}}</p>
                     </div>
                 </div>
             <div *ngIf="isEdit" class="edit" >
              <form class= "edit" [formGroup]= "updateForm">
-                    <label for="username">Username:</label>
-                    <input name="username" type="text" formControlName= "username"/>
-                    <label for="nickname">Nickname:</label>
-                    <input name= "nickname" type="text" formControlName= "nickname"/>
-                    <label for="title">Title:</label>
-                    <input name= "title" type="text" formControlName= "title"/>
-                    <label for="text">Text:</label>
-                    <textarea name= "text" type="text" formControlName= "text"></textarea>
-                    <button type="button" (click)="updatePost(post._id)" [disabled]= "!updateForm.valid">ACTUALIZAR</button>
+                    <div class="ui-fluid p-formgrid p-grid">
+                        <div class="p-field p-col-12">
+                            <label for="title">Title</label>
+                            <input id="title" type="text" size="50" pInputText formControlName= "title"/> 
+                        </div>
+                        <div class="p-field p-col-12">
+                            <label for="text">Text</label>
+                            <textarea [rows]="8" [cols]="50" pInputTextarea autoResize="autoResize" name= "text" type="text" formControlName= "text"></textarea>
+                        </div>
+                        <button pButton  class= "p-col-12" style="width: 10em; margin: 0 auto;" type="button" label="Update Post" (click)="updatePost(post._id)"></button>
+                    </div>
                 </form>
-                 </div> 
-                </td>
-                <td> <button pButton label="Edit" class="ui-button-rounded" type="button" 
-                    (click)= "editPost(post._id, $event)"></button></td>
-                </tr>
-                
+             </div> 
+        </td>
+    </tr>    
     </ng-template>
 </p-table>
 
