--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,37 @@
-nav a{
-    padding-left: 15px;
+:host {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
+
+.menu__nav{
+    width: 100%;
+    height: 30px;
+    background-color: black;
+    font-family: 'Montserrat', sans-serif;
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  .menu__list{
+    width: 100%;
+    padding: 0;
+    margin: auto;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+  }
+  
+  .menu__list-item a{
+    text-decoration: none;
+    color: white;
+    padding: 0 10px;
+    text-transform: uppercase;
+    font-size: 20px;
+    cursor: pointer;
+  }
